// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing ThingContext matches snapshot matches snapshot with thing provided 1`] = `
<body>
  <div>
    <div>
      <h2>
        example value
      </h2>
    </div>
  </div>
</body>
`;

exports[`Testing ThingContext matches snapshot matches snapshot with thingUrl provided 1`] = `
<body>
  <div>
    <div>
      <h2>
        test nick value
      </h2>
    </div>
  </div>
</body>
`;
